Resolved issue where Trailers are difficult to watch on mobile

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -101,6 +101,29 @@
   animation: reveal 600ms;
 }
 
+.trailerModalContainer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  z-index: 3;
+  transition: 600ms;
+  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition-property: opacity, transform;
+}
+
+.trailerVideo {
+  width: 100%;
+  object-fit: contain;
+}
+
 .mobileVideo {
   position: fixed;
   width: 100%;
@@ -155,22 +178,6 @@
   );
 }
 
-.movieListPlayer {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--overlay);
-  z-index: 3;
-  transition: 600ms;
-  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition-property: opacity, transform;
-}
-
 .footer {
   display: flex;
   align-items: center;
@@ -194,7 +201,7 @@
   height: 0;
 }
 
-.trailerCloseButton {
+.trailerModalCloseBtn {
   text-decoration: none;
   padding: 0.7rem 1.8rem;
   border-radius: 0;
@@ -207,7 +214,7 @@
   white-space: nowrap;
   transition: 200ms;
   background: var(--container);
-  position: fixed;
+  position: absolute;
   top: 4vh;
   right: 3vw;
   border-radius: 3rem;
